--- a/hello2.html
+++ b/hello2.html
@@ -3,4 +3,7 @@
     <head>
         <title>Hello.....!!!</title>
     </head>
+    <body>
+        <h1>Welcome to my website</h1>
+    </body>
 </html>
